--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
       <!-- Sidebar -->
       <div class="col-sm-2">
         <ul class="sidebar">
-          <li class="sidebarItem"><a href="#">Education</a></li>
-          <li class="sidebarItem"><a href="#">Work Based Experience</a></li>
-          <li class="sidebarItem"><a href="#">Certifications/ Achievements</a></li>
-          <li class="sidebarItem"><a href="#">Additional</a></li>
-        </ul>
+         
       </div>
       <!-- Resume -->
 
@@ -60,7 +56,7 @@
               </li>
             </ul>
 
-            <b>Select mentors and instructors to conduct events on 3D printing, coding, augmented reality and gaming</b>
+            <b>Made ideas to conduct events on 3D printing, coding, and entrepreneurship</b>
             <ul>
               <li>
                
